feat: fresh setup with Express API and Next.js UI (top 30)\n\n- Add root package.json with scripts\n- Implement src/server.js (Express + Next integration, /api/markets with cache)\n- Add web/pages (_app, index) and styles\n- Ready for local dev and prod run

--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "crypto-market-cap-rank",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "type": "module",
-  "engines": {
-    "node": ">=18"
-  },
+  "engines": { "node": ">=18" },
   "scripts": {
-    "start": "NODE_ENV=production node src/server.js",
     "dev": "nodemon src/server.js",
-    "build": "next build web"
+    "build": "next build web",
+    "start": "NODE_ENV=production node src/server.js"
   },
   "dependencies": {
     "express": "^4.19.2",
@@ -21,3 +19,4 @@
     "nodemon": "^3.1.4"
   }
 }
+
