--- a/package.json
+++ b/package.json
@@ -2,21 +2,15 @@
   "name": "crypto-market-cap-rank",
   "version": "0.2.0",
   "private": true,
-  "type": "module",
   "engines": { "node": ">=18" },
   "scripts": {
-    "dev": "nodemon src/server.js",
-    "build": "next build web",
-    "start": "NODE_ENV=production node src/server.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start -p $PORT"
   },
   "dependencies": {
-    "express": "^4.19.2",
     "next": "^14.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.4"
   }
 }
-
